...
    android:layout_height="match_parent"
    android:background="@drawable/background_brown"
    android:orientation="vertical"
    tools:context=".Staff_App.Activities.ManageStaffActivity">

    <Button
        android:id="@+id/addButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="108dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
...
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heatingOption" />

    <CheckBox
        android:id="@+id/milkOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/milk_full_cream_skim_almond_soy"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugarOption" />

    <CheckBox
        android:id="@+id/sugarOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/sugar_sugar_sweetener"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decafOption" />

    <CheckBox
        android:id="@+id/decafOption"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
...
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionTitle" />

    <CheckBox
        android:id="@+id/extrasOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/extras_vanilla_caramel_chocolate_cream"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milkOption" />

    <CheckBox
        android:id="@+id/frappeOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/frappe_turns_beverage_into_a_frappe"
...
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frappeOption" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/input_field"
...
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/menuBarInsert" />

    <EditText
        android:id="@+id/editTextShortDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/input_field"
...
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/input_field"
...
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextShortDesc" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/input_field"
...
