...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_brown"
    tools:context=".Staff_App.Activities.MainActivity">

    <Button
        android:id="@+id/button_ValidateId"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="251dp"
        android:layout_height="67dp"
        android:layout_marginStart="321dp"
        android:layout_marginLeft="321dp"
        android:layout_marginTop="464dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextStaffID"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginStart="261dp"
        android:layout_marginLeft="261dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="260dp"
...
