<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_brown"
    tools:context=".Staff_App.Activities.MainMenuActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/menuBarInsert"
        android:name="com.example.beverage_booker_staff.Staff_App.Activities.StaffMenuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/OrdersButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/button"
        android:text="@string/orders"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuBarInsert" />

    <Button
        android:id="@+id/DeliveriesButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/deliveries"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OrdersButton" />

    <Button
        android:id="@+id/MenuButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/menu"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeliveriesButton" />

    <Button
        android:id="@+id/inventoryButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/inventory"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MenuButton" />

    <Button
        android:id="@+id/manageStaffButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/manage_staff"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryButton" />

</androidx.constraintlayout.widget.ConstraintLayout>